<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concert_msgs</name>
  <version>0.0.1</version>
  <description>The concert_msgs package</description>

  <maintainer email="marco.magri@fraunhofer.it">Marco Magri</maintainer>
  <license>Apache-2.0</license>
  <author email="marco.magri@fraunhofer.it">Marco Magri</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml" />
  </export>
</package>