<?xml version="1.0"?>
<package format="2">
  <name>bt_action_server</name>
  <version>0.0.0</version>
  <description>The bt_action_server package</description>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>
  <author email="michael.terzer@fraunhofer.it">Michael Terzer</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>behaviortree_cpp</build_depend>
  <build_depend>bt_executor</build_depend>
  <build_depend>behavior_tree_msgs</build_depend>
  <build_depend>groot</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <depend>ament_cmake_pytest</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>