<?xml version="1.0"?>
<package format="3">
  <name>bt_service_server</name>
  <version>0.0.0</version>
  <description>The bt_service_server package</description>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>
  <license>Copyright Fraunhofer Italia 2023</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>behaviortree_cpp</build_depend>
  <build_depend>bt_executor</build_depend>
  <build_depend>groot</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>