<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fhi_skills</name>
  <version>0.0.1</version>
  <description>Collection of skills related to fhi_msgs package</description>
  <maintainer email="marco.magri@fraunhofer.it">Marco Magri</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>bt_executor</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>fhi_msgs</depend>
  <depend>behavior_tree_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <fhi_skills plugin="plugins.xml" />
    <fhi_skills config="config/string_trigger.xml" />
    <fhi_skills config="config/string_trigger_action.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>