<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_skills</name>
  <version>0.0.0</version>
  <description>TODO: description</description>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>
  <maintainer email="marco.magri@fraunhofer.it">Marco Magri</maintainer>
  <license>Copyright Fraunhofer Italia 2024</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>bt_executor</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>behavior_tree_msgs</depend>

  <depend>tf2</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <nav2_skills plugin="plugins.xml" />
    <nav2_skills config="config/navigate_to_pose.xml" />
    <nav2_skills config="config/drive_on_heading.xml" />
    <nav2_skills config="config/move_laterally.xml" />
    <nav2_skills config="config/spin.xml" />
    <nav2_skills config="config/serialized/navigate_to_pose.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>