<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>std_skills</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.terzer@fraunhofer.it">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>bt_executor</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>behavior_tree_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <std_skills plugin="plugins.xml" />
    <std_skills config="config/set_bool.xml" />
    <std_skills config="config/trigger.xml" />
    <std_skills config="config/wait_for_acknowledge.xml" />
    <std_skills config="config/packers/pose.xml" />
    <std_skills config="config/packers/pose_stamped.xml" />
    <std_skills config="config/packers/transform_stamped.xml" />
    <std_skills config="config/unpackers/transform_stamped.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>